--- a/Train Model.ipynb
+++ b/Train Model.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as npxternals"
+    "import numpy as np\n",
+    "import sklearn\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import ensemble\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "import joblib\n",
+    "from joblib import dump, load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +38,7 @@
       "text/plain": "Index(['year_built', 'stories', 'num_bedrooms', 'full_bathrooms',\n       'half_bathrooms', 'livable_sqft', 'total_sqft', 'garage_type',\n       'garage_sqft', 'carport_sqft', 'has_fireplace', 'has_pool',\n       'has_central_heating', 'has_central_cooling', 'house_number',\n       'street_name', 'unit_number', 'city', 'zip_code', 'sale_price'],\n      dtype='object')"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 35
     }
    ],
    "source": [
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +69,7 @@
       "text/plain": "Index(['year_built', 'stories', 'num_bedrooms', 'full_bathrooms',\n       'half_bathrooms', 'livable_sqft', 'total_sqft', 'garage_type',\n       'garage_sqft', 'carport_sqft', 'has_fireplace', 'has_pool',\n       'has_central_heating', 'has_central_cooling', 'city', 'sale_price'],\n      dtype='object')"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 37
     }
    ],
    "source": [
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,26 +88,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making an matrix of X and y\n",
+    "X = features_df.values\n",
+    "y = features_df['sale_price'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'as_matvalues'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-6aca7372d1ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create X and y arrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_matvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5272\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5273\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5274\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5276\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'as_matvalues'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 270897.,  302404., 2519996., ...,   98280.,   98278.,  186480.])"
+     },
+     "metadata": {},
+     "execution_count": 42
     }
    ],
    "source": [
-    "# Create X and y arrays \n",
-    "X = features_df.values\n",
-    "X = features_df.as_matvalues"
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Split the data into training set (70%) and test set (30%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "GradientBoostingRegressor(loss='huber', max_depth=6, max_features=0.1,\n                          min_samples_leaf=9, n_estimators=1000,\n                          random_state=0)"
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "# Fit the regression model\n",
+    "model = ensemble.GradientBoostingRegressor(\n",
+    "        n_estimators= 1000,\n",
+    "        learning_rate=0.1,\n",
+    "        max_depth=6,\n",
+    "        min_samples_leaf=9,\n",
+    "        max_features=0.1,\n",
+    "        loss='huber',\n",
+    "        random_state = 0\n",
+    ")\n",
+    "\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['trained_house_classifier_model.pkl']"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "source": [
+    "# Saving the trained model to a file so we can use it in other programs\n",
+    "joblib.dump(model, 'trained_house_classifier_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Training Set Mean Absolute Error: 6456.1167\n"
+    }
+   ],
+   "source": [
+    "# Find the error rate on the training set\n",
+    "mse = mean_absolute_error(y_train, model.predict(X_train))\n",
+    "print(\"Training Set Mean Absolute Error: %.4f\" % mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Test Set Mean Absolute Error:  11488.4710\n"
+    }
+   ],
+   "source": [
+    "# Find the error rate on the test set \n",
+    "mse = mean_absolute_error(y_test, model.predict(X_test))\n",
+    "print(\"Test Set Mean Absolute Error:  %.4f\" % mse)"
    ]
   },
   {
