--- a/Train Model.ipynb
+++ b/Train Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
       "text/plain": "Index(['year_built', 'stories', 'num_bedrooms', 'full_bathrooms',\n       'half_bathrooms', 'livable_sqft', 'total_sqft', 'garage_type',\n       'garage_sqft', 'carport_sqft', 'has_fireplace', 'has_pool',\n       'has_central_heating', 'has_central_cooling', 'house_number',\n       'street_name', 'unit_number', 'city', 'zip_code', 'sale_price'],\n      dtype='object')"
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 3
     }
    ],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
       "text/plain": "Index(['year_built', 'stories', 'num_bedrooms', 'full_bathrooms',\n       'half_bathrooms', 'livable_sqft', 'total_sqft', 'garage_type',\n       'garage_sqft', 'carport_sqft', 'has_fireplace', 'has_pool',\n       'has_central_heating', 'has_central_cooling', 'city', 'sale_price'],\n      dtype='object')"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 5
     }
    ],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
       "text/plain": "array([ 270897.,  302404., 2519996., ...,   98280.,   98278.,  186480.])"
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 8
     }
    ],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,19 +136,19 @@
       "text/plain": "GradientBoostingRegressor(loss='huber', max_depth=6, max_features=0.1,\n                          min_samples_leaf=9, n_estimators=1000,\n                          random_state=0)"
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 10
     }
    ],
    "source": [
-    "# Fit the regression model\n",
+    "# Fit the regression model (Value Prediction)\n",
     "model = ensemble.GradientBoostingRegressor(\n",
-    "        n_estimators= 1000,\n",
-    "        learning_rate=0.1,\n",
-    "        max_depth=6,\n",
-    "        min_samples_leaf=9,\n",
-    "        max_features=0.1,\n",
-    "        loss='huber',\n",
-    "        random_state = 0\n",
+    "        n_estimators= 1000, # How many decision trees to build\n",
+    "        learning_rate=0.1, # How much each descision tree influence prediction \n",
+    "        max_depth=6, # How many layers deep \n",
+    "        min_samples_leaf=9, # At least 9 houses should exhibit same properties or how many times a value should appear (this is helpful in eliminating outliers)\n",
+    "        max_features=0.1, # % of features we randomly choose to build model\n",
+    "        loss='huber', # calucluating model's error rate or cost function \n",
+    "        random_state = 0 \n",
     ")\n",
     "\n",
     "model.fit(X_train, y_train)"
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
       "text/plain": "['trained_house_classifier_model.pkl']"
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 11
     }
    ],
    "source": [
@@ -175,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Training Set Mean Absolute Error: 6456.1167\n"
+     "text": "Training Set Mean Absolute Error: 7212.7038\n"
     }
    ],
    "source": [
@@ -192,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Test Set Mean Absolute Error:  11488.4710\n"
+     "text": "Test Set Mean Absolute Error:  10272.3201\n"
     }
    ],
    "source": [
