--- a/Train Model.ipynb
+++ b/Train Model.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "# Find the error rate on the training set\n",
+    "# Find the error rate on the training set (On average how wrong is our prediction model)\n",
     "mse = mean_absolute_error(y_train, model.predict(X_train))\n",
     "print(\"Training Set Mean Absolute Error: %.4f\" % mse)"
    ]
@@ -206,13 +206,6 @@
     "mse = mean_absolute_error(y_test, model.predict(X_test))\n",
     "print(\"Test Set Mean Absolute Error:  %.4f\" % mse)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
