--- a/Grid Search.ipynb
+++ b/Grid Search.ipynb
@@ -2,11 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn import ensemble\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Data\n",
+    "df = pd.read_csv(\"ml_house_data_set.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing insignificant features\n",
+    "del df['house_number']\n",
+    "del df['unit_number']\n",
+    "del df['street_name']\n",
+    "del df['zip_code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replacing categorical data with one-hot encoded data\n",
+    "features_df = pd.get_dummies(df, columns = ['garage_type', 'city'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del features_df['sale_price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting features into matrix / Array form \n",
+    "X = features_df.values\n",
+    "y = df['sale_price'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting data into training set (70%) and test data (30%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a model\n",
+    "model = ensemble.GradientBoostingRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "# Parameters of the model \n"
    ]
   }
  ],
@@ -21,9 +107,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python38264bitfeaae0ea38f749759f7aabe755a2e156",
+   "display_name": "Python 3.8.2 64-bit"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
