--- a/Train Model.ipynb
+++ b/Train Model.ipynb
@@ -101,6 +101,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the sale price from the feature data\n",
+    "del features_df['sale_price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
@@ -108,7 +118,7 @@
       "text/plain": "array([ 270897.,  302404., 2519996., ...,   98280.,   98278.,  186480.])"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "source": [
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +146,7 @@
       "text/plain": "GradientBoostingRegressor(loss='huber', max_depth=6, max_features=0.1,\n                          min_samples_leaf=9, n_estimators=1000,\n                          random_state=0)"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 11
     }
    ],
    "source": [
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -165,29 +175,12 @@
       "text/plain": "['trained_house_classifier_model.pkl']"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 12
     }
    ],
    "source": [
     "# Saving the trained model to a file so we can use it in other programs\n",
     "joblib.dump(model, 'trained_house_classifier_model.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Training Set Mean Absolute Error: 7212.7038\n"
-    }
-   ],
-   "source": [
-    "# Find the error rate on the training set (On average how wrong is our prediction model)\n",
-    "mse = mean_absolute_error(y_train, model.predict(X_train))\n",
-    "print(\"Training Set Mean Absolute Error: %.4f\" % mse)"
    ]
   },
   {
@@ -198,7 +191,24 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Test Set Mean Absolute Error:  10272.3201\n"
+     "text": "Training Set Mean Absolute Error: 6980.9003\n"
+    }
+   ],
+   "source": [
+    "# Find the error rate on the training set (On average how wrong is our prediction model)\n",
+    "mse = mean_absolute_error(y_train, model.predict(X_train))\n",
+    "print(\"Training Set Mean Absolute Error: %.4f\" % mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Test Set Mean Absolute Error:  10692.8096\n"
     }
    ],
    "source": [
